[package]
name = "git-tui-cloner"
version = "0.1.0"
edition = "2025"

[dependencies]
async-std = "1.13.1"
async-trait = "0.1.85"
dirs = "5.0"
urlencoding = "2.1"
base64 = "0.22.1"
crossterm = "0.29.0"
env_logger = "0.11.6"
ratatui = "0.29.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.46.1", features = ["full"] }
catppuccin = "2.5.1"
